[package]
name = "cacherebbok"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
tempfile = "3.17.1"

[dependencies.uuid]
version = "1.14.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
